--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,10 +1,9 @@
 @tailwind base;
-@tailwind components;
 @tailwind utilities;
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: white;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
@@ -29,7 +28,7 @@
   }
 
   .dark {
-    --background: 20 14.3% 4.1%;
+    --background: rgb(12, 10, 9);
     --foreground: 0 0% 95%;
     --card: 24 9.8% 10%;
     --card-foreground: 0 0% 95%;
