updated profile and events pages

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -60,3 +60,15 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+  .required::after {
+    content: ' *';
+    color: #7f1d1d;
+  }
+
+  .optional::after {
+    content: ' (optional)';
+    color: lightgray;
+  }
+}
